--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "winston": "^3.13.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17"
   }
 }
