--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "express": "^4.19.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
+    "uuid": "^9.0.1",
     "winston": "^3.13.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17"
+    "@types/cors": "^2.8.17",
+    "@types/uuid": "^9.0.8"
   }
 }
